Fix align sponsors CSS

--- a/css/site.css
+++ b/css/site.css
@@ -196,7 +196,7 @@
 }
 
 .site-sponsor-item.codely {
-    width: 120px;
+    width: 200px;
 }
 
 .site-sponsor-item.optare {
